--- a/readmore.css
+++ b/readmore.css
@@ -13,38 +13,39 @@
   .cc{
     text-decoration: none;
   color: black;
-    margin-top: 0.9vh;
-    margin-left:1.2vw;
+    margin: 1.1vh;
+    margin-left: 1.2vw;
     font-size: 25px;
   }
   .ne{
   text-decoration: none;
   margin-left:9.4vw;
-  margin-top: -2.1vh;
+  margin-top: -3.35vh;
   font-size: 25px;
   }
   .In{
   text-decoration: none;
-  margin-left: 21.95vw;
-  margin-top: -2.3vh;
+  margin-left: 22vw;
+  margin-top: -2.35vh;
   font-size: 25px;
   }
-  /* .world{
-    margin-left: 1325px;
-    margin-top: 2px;
+  .world{
+    margin-left: 1655px;
+    margin-top: -36px;
     font-size: 30px;
-  } */
-  /* .globelogo{
-    margin-left: 1290px;
-    margin-top: 80.5px;
-    font-size: 192px;
-  } */
-  /* .searchlogo{
-    margin-left: 1470px;
-    margin-top: 20px;
+  }
+  .globelogo{
+    margin-left: 1620px;
+    top: 0;
+    margin-top: -30.8px;
+    font-size: 32px;
+  }
+  .searchlogo{
+    margin-left: 1800px;
+    margin-top: -30px;
     font-size: 27px;
   }
-   */
+  
   .dot1{
   margin-top: -18px;
   font-size: 10px;
@@ -52,8 +53,8 @@
   }
   .dot2{
   font-size: 10px;
-  margin-left: 165px;
-  margin-top: -17px;
+  margin-left: 167px;
+  margin-top: -18px;
   }
   
   
@@ -66,6 +67,7 @@
     margin-right: 2%;
     text-decoration: white;
     width: 100%;
+   
     text-align: right;
     display: flex;
   }
@@ -210,17 +212,17 @@
   z-index:1;
   }
   .what {
-    margin-left:45.5%;
+    margin-left:-6.55%;
      font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
      font-size: 1.3rem;
      font-weight: bold;
   top: -100px;
-  margin-top: -50px;
+  margin-top: -3.7%;
    
      /* width: 150%; */
   }
   .Whos{
-    margin-top:-50px;
+    margin-top: -3.7%;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 1.3rem;
     font-weight: bold;
@@ -230,17 +232,17 @@
     font-size: 21px;
     font-weight: bold;
      
-    margin-top:-50px;
+    margin-top: -3.7%;
   }
   .Insights{
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
      font-size: 21px;
      font-weight: bold;
      margin-left: -21px;
-     margin-top:-50px;
+     margin-top: -3.7%;
   }
   .getin{
-   margin-top:-50px;
+   margin-top: -3.7%;
    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: 21px;
    font-weight: bold;
@@ -256,12 +258,12 @@
   .enimg{
    
     text-align: center;
-    margin-left: -60.4vw;
-    margin-top: -1.8vh;
+    margin-left: -81.5vw;
+    margin-top: 19px;
   }
   .gg{
-    margin-left: -10.6vw;
-    margin-top: 8px;
+    margin-left: 4vw;
+    margin-top: 14px;
     margin-bottom: -32px;
   width: 0%;
   font-size: 25px;
@@ -280,108 +282,91 @@
   
   
   .container{
-    background-image:url(hm.PNG);
+    background-color:red;
     position: cover;
     background-size: auto;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     display: flex;
-    margin-left: auto;
+    margin-left:0px;
   margin-right: auto;
-    height:49vw;
+    height:50.2vw;
     margin-top: -10px;
+  }
+  .imgb{
+    margin-left:0vw;
+    margin-top:13.4vh;
   }
   .paragraph{
     display: flex;
   }
   .para1{
-    margin-top: 200px;
+    margin-top: 220px;
     color: #fff;
-    font-size: 54px;
+    font-size: 70px;
     font-family: sans-serif;
-    margin-left: 3%;
+    margin-left:-1800px;
     width: 60vw;
     font-weight: bold;
    
   }
   .para2{
-    margin-top: 280px;
+    margin-top: 340px;
     color: #fff;
-    font-size: 54px;
+    font-size: 70px;
     font-family: sans-serif;
-    margin-left: -33.6%;
+    margin-left: -1150px;
     width: 60vw;
     font-weight: bold;
   }
   .para3{
-    margin-top: 380px;
+    margin-top: 440px;
     color: #fff;
-    font-size: 26px;
+    font-size: 33px;
     font-family: sans-serif;
-    margin-left: -33.5%;
+    margin-left: -1150px;
     width: 58vw;
+    line-height:50px;
   }
   .let{
     font-size: 120px;
-    margin-top: -120px;
+    margin-top: -60px;
   }
-  /* .circle {
-    width: 280px;
-    height: 280px;
+  .circle {
+    width: 400px;
+    height: 400px;
     line-height: 500px;
     border-radius: 50%;
     margin-top: 165px;
-    margin-left: -110%;
+    margin-left: -450px;
     color: black;
     text-align: center;
-    background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
-  } */
-  .circle{
     background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
   }
   .lets{
     font-size: 120px;
     margin-top: -120px;
   }
-  /* .circle2 {
-    width: 280px;
-    height: 280px;
-    line-height: 500px;
-    border-radius: 50%;
-    margin-top: 360px;
-    margin-left: -265px;
+  .circle2 {
+    width: 400px;
+    height: 400px;
+    line-height: 600px;
+    border-radius: 60%;
+    margin-top: 450px;
+    margin-left: -395px;
     color: black;
     text-align: center;
     background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
     border: black;
-  } */
+  }
   
-  .container1{
-    background-image: linear-gradient(to right, rgba(194, 206, 207, 0.904) , rgb(70, 173, 199));
-    height:12vh;
-    
   
-  }
-  .ppos1{
-    margin-left:3vw;
-    font-size:2vw;
-    padding-top:1.5vh;
-    color:#717171
-  }
-  .numbertext {
-    color: black;
-    font-size: 22px;
-    margin-left: 460px;
-    position: absolute;
-    margin-top: -49px;
-  }
-
   .container2{
   height: 99vh;
   background-color: white;
   display: flex;
-  margin-top: -40px;
+  margin-top: -50px;
   }
   
   
@@ -402,7 +387,7 @@
     position: absolute;
     top: 50%;
     width: auto;
-    margin-top: -116px;
+    margin-top: -52px;
     padding: 16px;
     color: white;
     font-weight: bold;
@@ -422,24 +407,15 @@
   .prev:hover, .next:hover {
     background-color: rgba(0,0,0,0.8);
   }
-                                                             /* first slide image and text */                                                           
-                                                             
-  .hpos2{
-    margin-top:-700px;
-    margin-left:280px;
-    color:white;
-    font-size:30px;
-  }
-                                                             
-                                                             
-                                                             
-  .text {
-    color:white;
+  
+  /* Caption text                                                               first slide css */
+  .text1 {
+    color:black;
     font-size: 28px;
   font-family: sans-serif;
     position: absolute;
-   margin-top: 25px;
-   margin-left: 280px;
+   margin-top: -600px;
+   margin-left: 100px;
     width: 50%;
     text-align: justify;
     line-height:40px;
@@ -447,21 +423,21 @@
   
   }
   .me{
-    color: black;
-    /* margin-left: 600px; */
-    /* margin-top: -1066px; */
-    /* font-size: 2vw; */
+    color: rgb(116, 110, 110);
+    margin-left: 570px;
+    margin-top: -766px;
+    font-size: 24px;
     font-family: sans-serif;
   }
   
   .co{
-  /* margin-left: 880px; */
-  /* margin-top: -28px; */
+  margin-left: 890px;
+  margin-top: -28px;
   font-size: 24px;
   font-family: sans-serif;
   }
   .int{
-    /* margin-left: 1100px; */
+    margin-left: 1120px;
     margin-top: -26px;
     font-size: 24px;
     font-family: sans-serif;
@@ -471,62 +447,62 @@
   
   
   
-  .meimge1{
-    margin-top: 60px;
-    margin-left: 1130px;
+  .meimge{
+    margin-top: 200px;
+    margin-left: 1074px;
     z-index: -1;
     display: flex;
-    /* width:1000px; */
+    width:350px;
+    height:350px;
    
   }
-  /* .rd {
+  .rd {
   width:10%;
   height:30px;
-  margin-top: 300px;
-  margin-left: 200px;
+  margin-top: 100px;
+  margin-left: 800px;
   border-radius: 30px;
-  background-color:#FFFFFF;
+  /* background-color:#FFFFFF; */
   text-align: center;
   border:2px solid;
-  border-color: rgba(0, 255, 0, 0.5);  
-  } */
-                                                        /* second slide image and text */
-
-        .globelogo{
-        margin-left: 590px;
-
-        margin-top: -700.5px;
-        font-size: 150px;
-       }
+  border-color:rgba(33, 55, 253, 0.5); 
+  }
   
-  .text1 {
-    color:white;
+  
+  
+  
+  /* ---------------------------second slides css------------------------ */
+  
+  .text2 {
+    color:black;
     font-size: 28px;
   font-family: sans-serif;
     position: absolute;
-   margin-top: 60px;
-   margin-left: 280px;
+   margin-top: -600px;
+   margin-left: 100px;
     width: 50%;
     text-align: justify;
+    line-height:40px;
    
   
   }
-  .me{
-    color: rgb(116, 110, 110);
-    margin-left: 470px;
-    margin-top: -566px;
+  .me2{
+   
+    margin-left: 570px;
+    margin-top: -766px;
     font-size: 24px;
     font-family: sans-serif;
   }
   
-  .co{
-  margin-left: 780px;
+  .co2{
+    color: rgb(116, 110, 110);
+  margin-left: 890px;
   margin-top: -28px;
   font-size: 24px;
   font-family: sans-serif;
   }
-  .int{
-    margin-left: 990px;
+  .int2{
+    margin-left: 1120px;
     margin-top: -26px;
     font-size: 24px;
     font-family: sans-serif;
@@ -537,63 +513,48 @@
   
   
   .meimge2{
-    margin-top: 60px;
-    margin-left: 1130px;
+    margin-top: 200px;
+    margin-left: 1050px;
     z-index: -1;
     display: flex;
+    width:350px;
+    height:350px;
    
   }
-  /* .rd {
-  width:10%;
-  height:30px;
-  margin-top: 300px;
-  margin-left: 200px;
-  border-radius: 30px;
-  background-color:#FFFFFF;
-  text-align: center;
-  border:2px solid;
-  border-color: rgba(0, 255, 0, 0.5);  
-  } */
   
   
   
+  /* ---------------------------third slides css------------------------ */
   
-                                        /* ---------------------------third slides css------------------------ */
-  
-  .text2 {
-    color:white;
+  .text3 {
+    color:black;
     font-size: 28px;
   font-family: sans-serif;
     position: absolute;
-   margin-top: 60px;
-   margin-left: 280px;
+   margin-top: -600px;
+   margin-left: 100px;
     width: 50%;
     text-align: justify;
     line-height:40px;
    
   
   }
-  .img5{
-    margin-left:500px;
-    margin-top:-700px;
-  }
-  .me2{
-   
-    margin-left: 470px;
-    margin-top: -570px;
+  .me3{
+    margin-left: 570px;
+    margin-top: -766px;
     font-size: 24px;
     font-family: sans-serif;
   }
   
-  .co2{
-    color: rgb(116, 110, 110);
-  margin-left: 780px;
-  margin-top: -28px;
+  .co3{
+    margin-left: 890px;
+    margin-top: -28px;
   font-size: 24px;
   font-family: sans-serif;
   }
-  .int2{
-    margin-left: 990px;
+  .int3{
+    color: rgb(116, 110, 110);
+    margin-left: 1120px;
     margin-top: -26px;
     font-size: 24px;
     font-family: sans-serif;
@@ -604,87 +565,41 @@
   
   
   .meimge3{
-    margin-top: 55px;
-    margin-left: 1120px;
+    margin-top: 200px;
+    margin-left: 1050px;
     z-index: -1;
     display: flex;
+    width:860px;
+    height:350px;
    
   }
   
   
   
-                                                    /* ---------------------------fourth slides css------------------------ */
   
-  .text3 {
-    color:white;
-    font-size: 28px;
-  font-family: sans-serif;
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #221f1f;
+    font-size: 22px;
+    margin-left: 1800px;
     position: absolute;
-   margin-top: 60px;
-   margin-left: 280px;
-    width: 50%;
-    text-align: justify;
-   
-  
+    margin-top: 20px;
   }
-  .img6{
-    margin-left:550px;
-    margin-top:-700px;
-  }
-  .me3{
-   
-    margin-left: 470px;
-    margin-top: -570px;
-    font-size: 24px;
-    font-family: sans-serif;
-  }
-  
-  .co3{
-   
-  margin-left: 780px;
-  margin-top: -28px;
-  font-size: 24px;
-  font-family: sans-serif;
-  }
-  .int3{
-    color: rgb(116, 110, 110);
-    margin-left: 990px;
-    margin-top: -26px;
-    font-size: 24px;
-    font-family: sans-serif;
-  }
-  
-  
-  
-  
-  
-  .meimge4{
-    margin-top: 55px;
-    margin-left: 1120px;
-    z-index: -1;
-    display: flex;
-   
-  }
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-
   
   /* The dots/bullets/indicators */
   .dot {
@@ -714,20 +629,13 @@
     to {opacity: 1}
   }
   .img1{
-    margin-top: -41px;
-    margin-left:-20vh
+    margin-top: -40px;
   }
   .img2{
-    margin-top: -41px;
-    margin-left:-20vh
+    margin-top: -40px;
   }
   .img3{
-    margin-top: -41px;
-    margin-left:-20vh
-  }
-  .img4{
-    margin-top: -41px;
-    margin-left:-20vh
+    margin-top: -40px;
   }
   
   
@@ -743,77 +651,46 @@
   
   
   .container3{
-  height: 88vh;
-  background-color:red;
+    /* padding-top:100px; */
+  height: 88.2vh;
+  background-color:lightgreen;
   display: flex;
-  margin-top:-165px;
-  
   }
-  .img7{
-margin-left:0vw;
-  }
-  .img8{
-    margin-left:0vw;
-
-  }
-  
-  
-  
-  .container4{
-    height:88vh;
-    background-color:skyblue;
-  }
-  .img10{
-    margin-left:951px;
-    margin-top:-812px;
-  }
-  .bpos{
-    font-size:80px;
-    margin-top:-665px;
-    color:white;
-    margin-left:230px;
-  }
-  .para2{
-    font-size:50px;
-    margin-top:-65px;
-    color:white;
-    margin-left:600px;
-  }
-  .para3{
-    font-size:50px;
-    margin-top:-60px;
+  .bpos1{
+    margin-left:-1600px;
+    margin-top:180px;
     color:black;
-    margin-left:960px;
+    font-size:90px;
+    font-family: 'Times New Roman', Times, serif
+    /* font-weight:bold; */
   }
-  .para4{
-    font-size:50px;
-    margin-top:70px;
-    color:white;
-    margin-left:595px;
+  .ppos18{
+    margin-left:-1550px;
+    margin-top:420px;
+    font-size:30px;
+    font-family: 'Times New Roman', Times, serif
   }
-  .para5{
-    font-size:50px;
-    margin-top:-53px;
-    color:black;
-    margin-left:960px;
+  
+  
+  
+ .container4{
+  background-color:yellow;
+  
+ }
+  
+  
+ .container5{
+  background-color:orange;
+ }
+ .image4{
+    margin-left:200px;
+    margin-top:100px;
+ }
+  
+  .hrow{
+    border: 10px solid red;
+    
   }
-
-  .para6{
-    font-size:80px;
-    margin-top:-81px;
-    color:black;
-    margin-left:1180px;
-  }
-  /* container-5 */
-  
-  
-  
-  /* .container5{
-  height: 99vh;
-  background-color: white;
-  display: flex;
-  margin-top: -120px;
-  } */
   
   
   
@@ -849,75 +726,8 @@ margin-left:0vw;
   
   
   
-  .ppos2{
-margin-left:-72.5vw;
-color:black;
-margin-top:25vh;
-font-size:3vw;
-  }
-  .ppos3{
-margin-left:0vw;
-color:white;
-font-size:3vw;
-margin-top:25vh;
-  }
-  .ppos4{
-    margin-left:-54.4vw;
-    color:black;
-    margin-top:35vh;
-    font-size:3vw;
-  }
-.ppos5{
- margin-left:1vw;
-color:white;
-margin-top:35vh;
-font-size:3vw;
-}
-.ppos6{
-margin-left:-27.7vw;
-color:black;
-margin-top:45vh;
-font-size:3vw;
-}
-.ppos7{
-margin-left:0.5vw;
-color:white;
-margin-top:45vh;
-font-size:3vw;
-}
-.rd {
-  width:11%;
-  height:40px;
-  margin-top: 600px;
-  margin-left: -215px;
-  border-radius: 30px;
-  /* background-color:#FFFFFF; */
-  text-align: center;
-  border:2px solid;
-  border-color: rgba(0, 255, 0, 0.5);  
-  }
-  .ppos8{
-    color:black;
-    margin-left:-82px;
-    font-size:35px;
-    margin-top:-0.6px;
-  }                                         
-  .ppos9{
-    color:white;
-    margin-left:75px;
-    font-size:35px;
-    margin-top:-41px;
-  } 
   
-  .ppos10{
-    margin-top:10px;
-    margin-left:100px;
-    color:white;
-  }
-  .ppos11{
-    margin-left:150px;
-    color:black;
-  }
+  
   .container9{
     background-image: linear-gradient(to right, rgb(151, 167, 185) , rgba(36, 82, 209, 0.986));
     height:86.6vh;
@@ -927,7 +737,7 @@ font-size:3vw;
   
   .footer{
     height: 60px;
-    margin-top: 0.3px;
+    margin-top: 0.6px;
     display: flex;
     background-color: bisque;
   }
@@ -967,37 +777,3 @@ font-size:3vw;
   
   
   
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
- 
