--- a/services1.css
+++ b/services1.css
@@ -651,26 +651,41 @@
   
   
   .container3{
-  height: 99vh;
-  background-color: white;
+    margin-top:-99.2px;
+  height: 88.2vh;
+  background-color:lightgreen;
   display: flex;
+  }
+  .bpos1{
+    margin-left:-1600px;
+    margin-top:180px;
+    color:black;
+    font-size:90px;
+    font-family: 'Times New Roman', Times, serif
+    /* font-weight:bold; */
+  }
+  .ppos18{
+    margin-left:-1550px;
+    margin-top:420px;
+    font-size:30px;
+    font-family: 'Times New Roman', Times, serif
   }
   
   
   
+ .container4{
+  background-color:yellow;
+  height:18.4vh;
+ }
   
   
-  /* container-4 */
-  
-  
-  
-  .container4{
-  height: 99vh;
-  background-color: white;
-  display: flex;
-  margin-top: -50px;
-  }
-  
+ .container5{
+  background-color:orange;
+  height:72vh;
+ }
+ .image2{
+  padding-top:0.5px;
+ }
   
   
   
@@ -679,49 +694,119 @@
   
   
   
-  .container5{
-  height: 99vh;
-  background-color: white;
-  display: flex;
-  margin-top: -120px;
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  .container1{
+    height:88vh;
+    background-color:seashell;
+    margin-top:-99.2px;
   }
+  .ppos16{
+    color:black;
+    margin-left:30px;
+    padding-top:30px;
+    font-size:40px;
+  }
+  .parapos1{
+    color:blank;
+    margin-left:110px;
+    margin-top:-40px;
+    font-size:27px;
+  }
+  .arr1{
+    margin-left:880px;
+    margin-top:-30px;
+  }
+  .line1{
+    margin-left:30px;
+  }
+  .parapos2{
+    color:blank;
+    margin-left:1080px;
+    margin-top:-40px;
+    font-size:27px;
+  }
+  .arr2{
+    margin-left:1830px;
+    margin-top:-40px;
+  }
+  .line2{
+    margin-left:990px;
+    margin-top:7px;
+  }
+  .parapos3{
+    color:blank;
+    margin-left:110px;
+    margin-top:-35px;
+    font-size:27px;
+  }
+  .arr3{
+    margin-left:880px;
+    margin-top:-35px;
+  }
+  .line3{
+    margin-left:30px;
+    margin-top:20px;
+  }
+  .parapos4{
+    color:blank;
+    margin-left:1080px;
+    margin-top:-35px;
+    font-size:27px;
+  }
+  .arr4{
+    margin-left:1830px;
+    margin-top:-35px;
+  }
+  .line4{
+    margin-left:990px;
+    margin-top:15px;
+  }
+
   
   
   
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  .container9{
+    background-image: linear-gradient(to right, rgb(151, 167, 185) , rgba(36, 82, 209, 0.986));
+    height:86.6vh;
+    margin-left:-0.4vw;
+    width:99.5vw;
+}
   
   .footer{
     height: 60px;
-    margin-top: 699px;
+    margin-top: 0.6px;
     display: flex;
     background-color: bisque;
   }
